tests/lean/structure_instance_bug3.lean.expected.out
structure_instance_bug3.lean:1:23: error: invalid structure value { ... }, field 'pure_bind' was not provided
structure_instance_bug3.lean:1:23: error: invalid structure value { ... }, field 'bind_assoc' was not provided
structure_instance_bug3.lean:1:23: error: failed to synthesize type class instance for
⊢ has_pure set
structure_instance_bug3.lean:1:23: error: failed to synthesize type class instance for
⊢ has_bind set
